[ADD: index.html // modification ligne 89]

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             <div class="items-center rounded-full bg-gray-200 hover:bg-gray-300 transition-colors hidden md:flex gap-3 px-4 py-2 flex-1 max-w-md mx-4 lg:mx-8 group animate-slide-down">
                 <input class="bg-transparent outline-none flex-1 w-full min-w-0 text-gray-700 placeholder-gray-400 cursor-magic3" type="text" placeholder="Rechercher..."> 
-                <i class="fas fa-search text-gray-700 group-hover:text-pink-600 transition-colors cursor-magic2 group-hover:scale-105"></i>
+                <i class="fas fa-search text-gray-700 group-hover:text-pink-600 transition-colors cursor-pointer group-hover:scale-105"></i>
             </div>
             
             <div class="flex items-center gap-4 animate-slide-right">
@@ -86,7 +86,7 @@
             <div class="relative text-center text-white px-6 animate-slide-up ">
                 <h1 class="text-5xl md:text-7xl font-bold mb-6 ">Klivio, l'allié de votre progression</h1>
                 <p class="text-xl md:text-2xl mb-8 opacity-90 ">Les meilleures formations sur le développement personnel</p>
-                <button class="px-8 py-4 bg-white hover:bg-black hover:text-white text-purple-600 rounded-full font-semibold hover:shadow-3xl transition-transform hover:scale-110 hover:duration-600">En savoir plus</button>
+                <button class="px-8 py-4 bg-white hover:bg-black hover:text-white text-purple-600 rounded-full font-semibold hover:shadow-3xl transition-transform hover:scale-110 hover:duration-600 cursor-pointer">En savoir plus</button>
             </div>
         </main>
 
